--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#fffff" />
-    <meta name="description" content="airbna - Vacation Homes & Condo Rentals" />
+    <meta name="description" content="Airbna - Vacation Homes & Condo Rentals" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>airbna - Vacation Homes & Condo Rentals</title>
+    <title>Airbna - Vacation Homes & Condo Rentals</title>
   </head>
   <body>
     <noscript></noscript>
